Improve error output of parser processor and fix checkstyle complaining about windows line feed.